<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Joki"
    android:orientation="vertical"
    android:background="@drawable/nana">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/joki"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama"
        android:textStyle="bold"
        android:textSize="25sp"
        android:id="@+id/nama"
        android:inputType="textPersonName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_server"
        android:textStyle="bold"
        android:textSize="25sp"
        android:id="@+id/id_server" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nick_ml"
        android:textStyle="bold"
        android:textSize="25sp"
        android:id="@+id/nick_ml" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rank"
        android:textStyle="bold"
        android:textSize="25sp"
        android:id="@+id/rank" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bintang"
        android:textStyle="bold"
        android:textSize="25sp"
        android:id="@+id/bintang" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/paket"
        android:textStyle="bold"
        android:textSize="25sp"
        android:id="@+id/paket" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="KIRIM"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:id="@+id/kirim"/>

</LinearLayout>