<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pubg"
    android:orientation="vertical"
    android:background="@drawable/pubg">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/pricepubg"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama"
        android:textStyle="bold"
        android:textSize="25sp"
        android:id="@+id/nama"
        android:inputType="textPersonName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_server"
        android:textStyle="bold"
        android:textSize="25sp"
        android:id="@+id/id_server" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nick_pubg"
        android:textStyle="bold"
        android:textSize="25sp"
        android:id="@+id/nick_pubg" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/uc"
        android:textStyle="bold"
        android:textSize="25sp"
        android:id="@+id/uc" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sisa"
        android:textStyle="bold"
        android:textSize="25sp"
        android:id="@+id/sisa" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="KIRIM"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:id="@+id/kirim"/>

</LinearLayout>